# Character-Action

./: .gitignore  CMakeLists.txt  README.MD
char_behavior/: CMakeLists.txt
char_behavior/src/: core_game  main.cpp  main.hpp
char_behavior/src/common/: after_utils.hpp  utils.hpp
char_behavior/src/common/utils/: FramePerSecond.cpp  FramePerSecond.hpp
char_behavior/src/core/: define.hpp  global.hpp  init.hpp
char_behavior/src/other/: Background.hpp  BackgroundMusic.cpp  BackgroundMusic.hpp  SimpleSprite.cpp  SimpleSprite.hpp
char_behavior/src/spirit/: CharacterSpirit.cpp  CharacterSpirit.hpp  TextBox.cpp  TextBox.hpp
resource/: config.yaml
